--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-export CAMERA_URL=http://localhost:8085
+export CAMERA_URL="http://localhost:8085/sample.jpeg"
 export SNAPSHOTS_FREQUENCY=5
-export SNAPSHOTS_DIRECTORY=./pics
+export LOG_LEVEL=debug
