Add archiving snapshots to zip files

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 export CAMERA_URL="http://localhost:8085/sample.jpeg"
 export SNAPSHOTS_FREQUENCY=5
 export LOG_LEVEL=debug
+export ARCHIVING_FREQUENCY=1
+export SNAPSHOTS_DIRECTORY=./pics
